Fixed graph visibility

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 ﻿
 body {
-    background-color: #FCF3CF;
+    background-color: #FFF;
     font-family: 'Raleway';
     font-size: 18px;
 }
@@ -11,14 +11,16 @@ header {
     background-image: url(welcomefarmimage.jpg);
     background-size: 100%, 50%;
     border-radius: 5px;
+    margin-bottom: 75px;
 }
 
 .yield-form {
     max-width: 200px;
-    padding: 25px 25px 60px 25px;
+    padding: 25px 25px 25px 25px;
     margin: 50px 10px 10px 10px;
     background-color: white;
     border: 2px solid #616D7E;
+    float: right;
 }
 
 label {
@@ -50,6 +52,20 @@ select {
     color: darkslategray;
 }
 
+canvas {
+    width: 80%  !important;
+    height: 80% !important;
+    margin: 10px 10px 10px 25px;
+}
+
+.results {
+    max-width: 200px;
+    margin-top: 50px;
+    padding: 10px 10px 10px 10px;
+    position: relative;
+    font-size: 1rem;
+}
+
 #cropMonth {
     margin-top: 1px;
 }
@@ -77,11 +93,4 @@ h6 {
     margin: 0;
     font-size: 1.5rem;
     color: white;
-}
-
-p {
-    margin: 0;
-    font-size: 1.5rem;
-    font-family: 'Raleway';
-    color: darkslategray;
 }
